# Gestion-des-tablissements-de-Transfusion-Sanguine

Crud/: main.c  p  user.c  user.h  user.txt
Project/projectETS (1)/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projectets.glade  projectets.gladep.bak  rdv.txt  resultat_tri_capacite.txt
Project/projectETS (1)/autom4te.cache/: output.1  requests  traces.0  traces.1
Project/projectETS (1)/po/: Makefile  Makefile.in
Project/projectETS (1)/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  etablissement.c  etablissement.h  fonction.c  fonction.h  interface.c.bak  interface.h.bak  main.c  projectets  r.txt  resultat_tri_capacite.txt  users.txt
